[package]
name = "e6502"
authors = ["JNjenga <me@jnjenga.com"]
description = "A 6502 CPU emulator that runs in the terminal with a 40x25 display input device and ability to step through asm code"
repository = "https://github.com/jnjenga/e6502"
readme = "README.md"
version = "0.1.0"
keywords = ["emulator", "6502"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "e6502c"
path = "src/compiler.rs"

[[bin]]
name = "e6502"
path = "src/main.rs"

[dependencies]
rand = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "ttf"]
